Bug 1543584 - Always rasterize SVGs but clamp the maximum size. r=tnikkel

SVG performance with the fallback path with WebRender is very bad. This
patch avoids fallback by always producing a rasterized surface we store
in SurfaceCache, but also clamping the size consistently to a configured
maximum. This will cause us to upscale rasterized SVGs which is
undesirable visually but is a lower risk change that we can uplift to
beta than fixing the underlying performance issue.

Differential Revision: https://phabricator.services.mozilla.com/D27159